--- a/powdermaker/index.html
+++ b/powdermaker/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Powder Maker</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="IMG_1326.ico">
     <style>
         * {
             margin: 0;
