--- a/powdermaker/index.html
+++ b/powdermaker/index.html
@@ -289,7 +289,7 @@
             a.download = "out.png";
             a.click();
         }
-        document.getElementById("dl", () => {
+        document.getElementById("dl").addEventListener("click", () => {
             exportPng();
         });
     </script>
