--- a/wiki/index.html
+++ b/wiki/index.html
@@ -8,6 +8,7 @@
     <script src="parser/rulesParser.js" type="module" defer></script>
     <script src="index.js" type="module" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rulesstyle.css">
     </link>
 </head>
 
@@ -18,8 +19,17 @@
         <div id="sideMenu">
             <div id="search">
                 <div id="searchOption">
-                    <div id="realSO">Option</div>
-                    <div id="optionSelector" class="n">
+                    <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                    <svg id="realSO" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000000"
+                        stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="3"></circle>
+                        <path
+                            d="M19.74,14H22V10H19.74l0-.14a8.17,8.17,0,0,0-.82-1.92l1.6-1.6L17.66,3.51l-1.6,1.6A8,8,0,0,0,14,4.25V2H10V4.25a8,8,0,0,0-2.06.86l-1.6-1.6L3.51,6.34l1.6,1.6a8.17,8.17,0,0,0-.82,1.92l0,.14H2v4H4.26l0,.14a8.17,8.17,0,0,0,.82,1.92l-1.6,1.6,2.83,2.83,1.6-1.6a8,8,0,0,0,2.06.86V22h4V19.75a8,8,0,0,0,2.06-.86l1.6,1.6,2.83-2.83-1.6-1.6a8.17,8.17,0,0,0,.82-1.92Z">
+                        </path>
+                    </svg>
+                    <div class="h" id="realBGbeh"></div>
+                    <div class="h" id="realBG"></div>
+                    <div id="optionSelector" class="h n">
                         <div class="option">
                             <p>Regexp</p>
                             <div class="toggle" data-opt="regex">
@@ -35,15 +45,14 @@
                         <div class="option">
                             <p>Search titles</p>
                             <div class="toggle" data-opt="title">
-                                <div class="toggleI"></div>
+                                <div class="toggleI on"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <input type="text" id="searchInput" placeholder="Search"></textarea>
+                <input type="text" id="searchInput" placeholder="Search" autocomplete="off"></textarea>
             </div>
             <div id="searchResDiv">
-
                 <div id="searchRes">
                     Found articles: <span id="nowSearched"></span><span id="searchedNumber"></span>
                 </div>
